--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
@@ -353,6 +353,68 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     border-color: #222222;
 }
 
+/*CUSTOMIZED SELECTBOX - changed metaMenu select / created selectionBox + selectContainer -2011-06-17 */
+.metaMenu .selectContainer select {
+	float:right;
+	margin-top:-1.63em;
+	margin-left:auto;
+	margin-right:-0.0909em;
+	
+	filter:alpha(opacity=0);
+	opacity:0;
+	-moz-opacity:0;
+	cursor:pointer;
+	background-color:#E7E8E2;
+	color:#307086;
+}
+.metaMenu .selectionBox {
+	color:#307086;
+	margin-left:0.5454em;
+	float:left;
+}
+.metaMenu .selectContainer {
+	margin-left:0.001em;
+	padding-top:0.3636em;
+	padding-bottom:0.18em;
+	height:1.72em; 
+	border:none;
+	background-color:#E7E8E2;
+}
+
+
+
+.selectContainer select {
+	float:left;
+	margin-top:-1.3636em;
+	margin-left:-0.0909em;
+	filter:alpha(opacity=0);
+	opacity:0;
+	-moz-opacity:0;
+	cursor:pointer;
+	background-color:#E7E8E2;
+	color:#307086;
+	border-bottom-color:#9fafae;
+	border-style:none;
+}
+.selectContainer .selectionBox {
+	padding-left:0.2727em !important;
+}
+.selectionBox {
+	color:#307086;
+	text-align:left;
+	cursor:pointer;
+	font-family: Verdana,Arial,Helvetica,sans-serif;
+	height:1.3636em;
+	overflow:hidden;
+}
+.selectContainer {
+	padding-top:0em;
+	padding-bottom:0.18em;
+	height:1.3636em; 
+	background-color:#F4F8F9;
+	border:0.0909em solid #222222;
+}
+
 /*LISTS & FULL ITEM*/
 /*GENERAL*/
 .itemList, .tiledList, .fullItem {
@@ -667,4 +729,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 	font-family: serif;
 	border-left-width: 2px !important;
 	border-right-width: 2px !important;
+}
+
+
+.languageArea .readonlyInput {
+	background-color:transparent;
+	border:none;
 }
