--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -288,7 +288,7 @@ body .wrapper {
 }
 
 .checkBoxSelectButton {
-	background-image: url('../images/All_View_TriangleClose_15_Active');
+	background-image: url('../images/All_View_TriangleClose_15_Active.png');
     background-repeat: no-repeat;
     background-position: center;
 	margin-top:0.18em;
