GUI - more & less icons fixed, itemHeadline with padding bottom in skin mpg, import main.css in skin blue

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -691,7 +691,7 @@ tbody .listItem span.statusArea {
 
 /*ITEM HEADER*/
 .itemHeader .itemHeadline {
-	padding: 0 !important;
+	padding: 0 0 0.3636em 0 !important;
 	margin-top:0.2727em;
 	margin-left:0.7272em;
 }
