--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/images.css
@@ -490,7 +490,7 @@ body .wrapper {
     background-position: left;
 }
 
-/*MISC*/
+/*MISC - deprecated*/
 .collapse, .expand /*, .files, .locators*/ {
     cursor: pointer;
 }
@@ -536,6 +536,54 @@ body .wrapper {
     background-position: center left;
     padding-left: 2.10em !important;
 }
+
+/* MISC */
+.collapseTriangle, .expandTriangle /*, .files, .locators*/ {
+    cursor: pointer;
+}
+
+.collapseTriangle {
+    background-image: url('../images/All_ListView_MinusSmallview_15_Active.gif');
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 2.10em !important;
+}
+
+.collapseTriangle:hover, .collapseTriangle:focus {
+    background-image: url('../images/All_ListView_MinusSmallview_15_Hover.gif');
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 2.10em !important;
+}
+
+.collapseTriangle:disabled {
+   	background-image: url('../images/All_ListView_MinusSmallview_15_Deactivated.gif');
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 2.10em !important;
+}
+
+.expandTriangle {
+    background-image: url('../images/All_ListView_PlusMediumview_15_Active.gif');
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 2.10em !important;
+}
+
+.expandTriangle:hover, .expandTriangle:focus {
+    background-image: url('../images/All_ListView_PlusMediumview_15_Hover.gif');
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 2.10em !important;
+}
+
+.expandTriangle:disabled {
+	background-image: url('../images/All_ListView_PlusMediumview_15_Deactivated.gif');
+    background-repeat: no-repeat;
+    background-position: center left;
+    padding-left: 2.10em !important;
+}
+
 @media print { .collapse, .expand {
         display: none !important;
 }
