--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
@@ -63,15 +63,29 @@
 	<a href="http://pubman.blogs.mpdl.mpg.de/2009/02/13/introduction-into-pubman-via-screencast-availabel-now/" target="_blank"><img src="/pubman/images/screencast.jpg" class="huge videoPreview"/></a>
 	<br/><br/><br/>
 	<h2>
-	PubMan Interfaces
+		PubMan Interfaces
 	</h2>
-		<ul>
-			<li>Search&Export Service (allows user-/local specific queries of data for integration into local systems). <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST interface</a>; <a href="/pubman/faces/../../search/SearchAndExport_rest_sample.jsp" target="_blank">sample query</a>.</li>
-			<li>Data Acquisition Service with an <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI interface</a> (fetching data from external sources like arXiv)</li>
-			<li><a href="/validation/" target="_blank">Validation service</a>: Validation and reporting on XML metadata.</li>
-			<li><a href="/cone/" target="_blank">Control of Named Entities Service (CoNE)</a>: Query for vocabularies like journal names or languages.</li>
-		    <li>A <a href="/sword-app/" target="_blank">SWORD Interface</a> for automated depositing.</li>
-		</ul>
+	<span>		
+		<h4>Search and Export</h4>
+		Do you want to integrate your PubMan Data within an external system?
+		<br/>
+		Necessary queries can be carried out via our !<a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST-Interface</a>!
+	
+	
+		<h4>Service for data transfer</h4>
+		Do you want to fetch data from external sources like arXiv,  BioMed Central, PubMed  Central or Spires?
+		<br/>
+		Use our <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI-interface</a>!
+		
+		<h4>Validation service</h4>
+		<a href="/validation/" target="_blank">Check</a> your XML data for formal correctness with our validation service.
+				
+		<h4>Control of Named Entities (CoNE)</h4>
+		Search and administrate <a href="/cone/" target="_blank">controlled vocabularies</a> for persons, journals, classifications or languages.
+	
+		<h4>SWORD-Interface</h4>
+		Use this <a href="/sword-app" target="_blank">push service</a> for automatic depositing from external servers.
+	</span>
 	<span>Further information on the interfaces can be found under:</span>
 	<a href="http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces" target="_blank">http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces</a>
 </h:panelGroup>
@@ -89,7 +103,7 @@
 	</p>	
 	<a href="http://colab.mpdl.mpg.de/mediawiki/Portal:PubMan" target="_blank">Lesen Sie mehr </a>
 	<h:outputText value="|"/>
-    <a href="http://colab.mpdl.mpg.de/mediawiki/PubMan_Support" target="_blank"><h:outputText value="#{lbl.Home_Link_Support }"/></a>
+    <a href="http://colab.mpdl.mpg.de/mediawiki/PubMan_Support" target="_blank"><h:outputText value="#{lbl.Home_Link_Support}"/></a>
 	<br/><br/>
 	<h3>Suchen Sie hier nach Publikationen</h3>
 	<span class="huge_area0 xSmall_marginLIncl searchMenu" style="float:left; margin-top:0px !important;">
@@ -111,24 +125,26 @@
 		PubMan Schnittstellen
 	</h2>
 	<span>		
-	<h4>Suche und Export</h4>
-	Wollen Sie eine neue Publikation ertellen? Folgende Möglickeiten können Sie nutzen:
-	<ul style="list-style-position: outside">
-		<li>Der <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST</a> Service unterstützt Datenanfragen zur Integration in externe Systeme.</li>
-	</ul>
+	<h4>Suchen und Exportieren</h4>
+	Möchten Sie Ihre PubMan Daten in einem externen System integrieren?
+	<br/>
+	Die notwendigen Datenabfragen können Sie über unsere <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST-Schnittstelle</a> vornehmen.
 
-	<h4>Service zur Datenerfassung</h4>
-	Mit einer <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI Schnittstelle</a> für den Datenimport aus externen Systemen wie arXiv wartet dieser Service auf.
+
+	<h4>Service zur Datenübernahme</h4>
+	Möchten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren?
+	<br/>
+	Nutzen Sie dazu unsere <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI-Schnittstelle</a>!
 	
-	<h4>Service zur Validierung</h4>
-	Der Service zur <a href="/validation/" target="_blank">Validierung</a> bietet Ihnen die Möglichkeit XML Daten zu überprüfen.
+	<h4>Validierungsservice</h4>
+	<a href="/validation/" target="_blank">Prüfen</a> Sie Ihre XML-Daten auf formale Richtigkeit!
 			
-	<h4>Unterstützung von ”Kontrolliertem Vokabular” (CoNE)</h4>
-	Zur eindeutigen Identifiezierung kann auf <a href="/cone/" target="_blank">Kontrolliertes Vokabular</a> zurückgegriffen werden.
+	<h4>Control of Named Entities (CoNE)</h4>
+	Durchsuchen und verwalten Sie <a href="/cone/" target="_blank">kontrollierte Vokabulare</a> für Personen, Zeitschriften, Klassifikationen oder Sprachen.
 
-	<h4>SWORD Schnittstelle</h4>
-	Außerdem bietet PubMan eine <a href="/sword-app" target="_blank">SWORD Schnittstelle</a> für den automatisierten Import.
-</span></br></br>
+	<h4>SWORD-Schnittstelle</h4>
+	Nutzen Sie diesen <a href="/sword-app" target="_blank">Push-Dienst</a> zum automatisierten Datenimport von externen Servern.
+</span>
 
 	<span>Weitere Informationen finden Sie unter:</span>
 	<a href="http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces" target="_blank">http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces</a>
