--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
@@ -69,7 +69,7 @@
 		<h4>Search and Export</h4>
 		Do you want to integrate your PubMan Data within an external system?
 		<br/>
-		Necessary queries can be carried out via our !<a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST-Interface</a>!
+		Necessary queries can be carried out via our <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST-Interface</a>!
 	
 	
 		<h4>Service for data transfer</h4>
@@ -86,6 +86,7 @@
 		<h4>SWORD-Interface</h4>
 		Use this <a href="/sword-app" target="_blank">push service</a> for automatic depositing from external servers.
 	</span>
+	<br/><br/>
 	<span>Further information on the interfaces can be found under:</span>
 	<a href="http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces" target="_blank">http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces</a>
 </h:panelGroup>
@@ -125,27 +126,27 @@
 		PubMan Schnittstellen
 	</h2>
 	<span>		
-	<h4>Suchen und Exportieren</h4>
-	Möchten Sie Ihre PubMan Daten in einem externen System integrieren?
-	<br/>
-	Die notwendigen Datenabfragen können Sie über unsere <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST-Schnittstelle</a> vornehmen.
-
-
-	<h4>Service zur Datenübernahme</h4>
-	Möchten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren?
-	<br/>
-	Nutzen Sie dazu unsere <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI-Schnittstelle</a>!
+		<h4>Suchen und Exportieren</h4>
+		Möchten Sie Ihre PubMan Daten in einem externen System integrieren?
+		<br/>
+		Die notwendigen Datenabfragen können Sie über unsere <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST-Schnittstelle</a> vornehmen.
 	
-	<h4>Validierungsservice</h4>
-	<a href="/validation/" target="_blank">Prüfen</a> Sie Ihre XML-Daten auf formale Richtigkeit!
-			
-	<h4>Control of Named Entities (CoNE)</h4>
-	Durchsuchen und verwalten Sie <a href="/cone/" target="_blank">kontrollierte Vokabulare</a> für Personen, Zeitschriften, Klassifikationen oder Sprachen.
-
-	<h4>SWORD-Schnittstelle</h4>
-	Nutzen Sie diesen <a href="/sword-app" target="_blank">Push-Dienst</a> zum automatisierten Datenimport von externen Servern.
-</span>
-
+	
+		<h4>Service zur Datenübernahme</h4>
+		Möchten Sie Publikationsdaten von externen Systemen wie arXiv, BioMed Central, PubMedCentral oder Spires importieren?
+		<br/>
+		Nutzen Sie dazu unsere <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI-Schnittstelle</a>!
+		
+		<h4>Validierungsservice</h4>
+		<a href="/validation/" target="_blank">Prüfen</a> Sie Ihre XML-Daten auf formale Richtigkeit!
+				
+		<h4>Control of Named Entities (CoNE)</h4>
+		Durchsuchen und verwalten Sie <a href="/cone/" target="_blank">kontrollierte Vokabulare</a> für Personen, Zeitschriften, Klassifikationen oder Sprachen.
+	
+		<h4>SWORD-Schnittstelle</h4>
+		Nutzen Sie diesen <a href="/sword-app" target="_blank">Push-Dienst</a> zum automatisierten Datenimport von externen Servern.
+	</span>
+	<br/><br/>
 	<span>Weitere Informationen finden Sie unter:</span>
 	<a href="http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces" target="_blank">http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces</a>
 </h:panelGroup>
