--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
@@ -56,7 +56,7 @@
 }
 
 .itemList .collapseTriangle, .itemList .expandTriangle {
-	display: none;
+	display: inline;
 }
 
 .itemList ol, .itemList ul, .tiledList ol, tiledList ul {
@@ -119,8 +119,9 @@
 }
 
 .listHeader .headerSwitchView {
-	padding-top: 0.37em;
-	padding-bottom: 0em;
+	margin-top:0.3636em;
+	margin-left:0.1818em;
+	padding: 0;
 }
 	/*SELECT MENU*/
 	
@@ -274,6 +275,10 @@
 	margin-bottom: -3em;
 }
 
+.listItem .shortView {
+	margin-top:0.3636em;
+}
+
 .listItem .shortView, .listItem .mediumView {
 	margin-bottom: 0.5em;
 }
@@ -284,9 +289,13 @@
 
 	/*ITEM HEADER*/
 
+.free_area0_p6.itemHeadline {
+	padding-top:0.1818em;
+	padding-bottom:0.1818em;
+}
+
 .listItem .itemHeadline {
 	width: 59.56em;
-	padding-bottom: 1.00em;
 }
 
 .itemHeader label {
