--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
@@ -148,10 +148,14 @@
      border-style: solid;
      border-top-width: 0px ! important;
      position: absolute;
-     margin-top: 0;
+     margin-top: -0.1818em;
      margin-left: 4.2em;
 	 padding-bottom:0.4545em;
      z-index: 3;
+}
+
+th .selectMenu {
+	margin-top:0;
 }
 
 .selectMenu input {
