Changed size for collections list
Former-commit-id: a88f42dda83693411756bfce9ab1a4da66010457

--- a/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
@@ -50,7 +50,7 @@
 
 					<b class="quad_label">&#160;</b>
 					
-					<h:selectOneMenu styleClass="large_select" id="selectContext" value="#{contextCriterionBean.contextCriterionVO.searchString}">
+					<h:selectOneMenu styleClass="quad_select" id="selectContext" value="#{contextCriterionBean.contextCriterionVO.searchString}">
 						<f:selectItems value="#{AdvancedSearchEdit.contextCriterionCollection.contextList}"/>
 					</h:selectOneMenu>
 
